Removed build shell script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Browser extension to automatically create tab groups based on domain patterns",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js && node scripts/post-build.js",
+    "build:zip": "npm run build && node scripts/create-zip.js",
     "watch": "webpack --config webpack.config.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
